--- a/css/style.scss
+++ b/css/style.scss
@@ -238,6 +238,7 @@ body {
               font-weight: bold;
               // letter-spacing: 1px;
               border-radius: 1px;
+              margin-bottom: 5px;
               &::before {
                 background-size: 11px 11px;
                 display: inline-block;
@@ -340,6 +341,7 @@ body {
         }
         margin-bottom: 50px;
         a {
+          position: relative;
           display: inline-block;
           text-decoration: none;
           color: $bg;
